# pwr-scripting-programming

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_sheet.ods
01 news_scraping/: .gitignore  pyproject.toml
01 news_scraping/src/: test_news.md
01 news_scraping/src/news_scraping/: __main__.py
01 news_scraping/test/: test_markdown_generator.py  test_web_scraper.py
02 django/mysite/mysite/: settings.py
02 django/mysite/polls/: admin.py  models.py  urls.py  views.py
02 django/mysite/polls/migrations/: 0001_initial.py  0002_token.py  0003_poll.py  0004_question_poll_id_alter_poll_id.py  0005_token_poll_alter_poll_id.py
02 django/mysite/polls/templates/polls/: answers.html  dashboard.html  details.html  error.html  (+3 more)
03 metadata_analysis/: pyproject.toml  requirements.txt
03 metadata_analysis/src/metadata_analysis/: __main__.py
03 metalada_analysis/: pyproject.toml
03 metalada_analysis/src/metadata_analysis/: __main__.py
04 bash_scripts/: 02 encrypted_archive_creation.sh  03 speedtest.sh
src/liczyrzepa/: __main__.py  chart_creator.py  gui.py  news_item.py  price_history.py  price_record.py  spreadsheet_saver.py  web_scraper.py
src/news_scraping/: markdown_generator.py
test/: price_history_factory.py  test_chart_creator.py  test_markdown_generator.py  test_price_history.py  test_price_history_factory.py  test_price_record.py  test_spreadsheet_saver.py  test_web_scraper.py
test/data/: empty_black_monk_munchkin_legends.json  inflacja.json  lidl_kombinezon_lupilu.json  modified_price_history.json  sheet.ods  test_price_history.json
