[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadata_analysis"
version = "0.0.1"
authors = [
  { name="Mateusz Dobrzyński" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src/metadata_analysis", "src"
]
